--- a/angular4/src/app/login/login.component.css
+++ b/angular4/src/app/login/login.component.css
@@ -1,14 +1,14 @@
 .app-content{
     margin: 100px;
     padding: 50px;
-  
+
   }
-  
+
   .app-input-icon {
     font-size: 16px;
   }
-  
-  
+
+
   form {
     width: 500px;
     margin: 4em auto;
@@ -16,15 +16,15 @@
     background: #fafafa;
     border: 1px solid #ebebeb;
     box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
-  
+
   }
-  
+
   .group {
     position: relative;
     margin-bottom: 45px;
-  
+
   }
-  
+
   .corner-ribbon{
     width: 200px;
     background: #e43;
@@ -38,17 +38,17 @@
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
   }
-  
+
   /* Custom styles */
-  
+
   .corner-ribbon.sticky{
     position: fixed;
   }
-  
+
   .corner-ribbon.shadow{
     box-shadow: 0 0 3px rgba(0,0,0,.3);
   }
-  
+
   /* positions */
   .corner-ribbon.top-right{
     top: 25px;
@@ -59,4 +59,8 @@
   }
   #err {
     color : red;
+  }
+
+  .w-70{
+    width:70%
   }
