--- a/angular4/src/app/register/register.component.html
+++ b/angular4/src/app/register/register.component.html
@@ -1,46 +1,73 @@
+<form role="form" #mainForm="ngForm">
 
-
-    <form role="form" #mainForm ="ngForm" ><br>
-      <div layout="row" class="layout-row">
-        <div layout="col-sm-12">
-          <mat-form-field flex="50" class="w-70">
-            <input matInput  type="text" required [(ngModel)]="user.username" id="username" name="username" placeholder="user name">
-          </mat-form-field>
-        </div>
-      </div>
-<div layout="row" class="layout-row">
-  <div layout="col-sm-12">
-    <mat-form-field flex="50" class="w-70">
-      <input matInput type="text" required [(ngModel)]="user.name" id="name" name="name" placeholder="name">
-    </mat-form-field>
+  <br>
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="text" required [(ngModel)]="user.username" id="username" name="username" placeholder="user name">
+      </mat-form-field>
+    </div>
   </div>
-</div>
-
-<div layout="row" class="layout-row">
-  <div layout="col-sm-12">
-    <mat-form-field flex="50" class="w-70">
-      <input matInput type="email" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" [(ngModel)]="user.email" id="email" name="email" placeholder="email">
-    </mat-form-field>
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="text" required [(ngModel)]="user.name" id="name" name="name" placeholder="name">
+      </mat-form-field>
+    </div>
   </div>
-</div>
 
-<div layout="row" class="layout-row">
-  <div layout="col-sm-12">
-    <mat-form-field flex="50" class="w-70">
-      <input matInput type="password" required [(ngModel)]="user.password" id="password" name="password" placeholder="password">
-    </mat-form-field>
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="email" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" [(ngModel)]="user.email" id="email"
+          name="email" placeholder="email">
+      </mat-form-field>
+    </div>
   </div>
-</div>
 
-<div layout="row">
-  <div layout="col-s6">
-    <button mat-raised-button color="warn" (click)="register()" [disabled]="!mainForm.valid" name="action">REGISTER</button><br><br>
-
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <textarea matInput type="text" [(ngModel)]="user.location" id="location"
+          name="location" placeholder="location"> </textarea>
+      </mat-form-field>
+    </div>
   </div>
-</div>
+
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="number" min="5" max="120" [(ngModel)]="user.age" id="age"
+          name="age" placeholder="age">
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="password" required [(ngModel)]="user.password" id="password" name="password" placeholder="password">
+      </mat-form-field>
+    </div>
+  </div>
+  <div layout="row" class="layout-row">
+    <div layout="col-sm-12">
+      <mat-form-field flex="50" class="w-90">
+        <input matInput type="password" required pattern="user.password" id="re-password" name="re-password" placeholder="re-password">
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div layout="row">
+    <div layout="col-s6">
+      <button mat-raised-button color="warn" (click)="register()" [disabled]="!mainForm.valid" name="action">REGISTER</button>
+      <br>
+      <br>
+
+    </div>
+  </div>
 
 
 
-    </form >
-
+</form>
 
